--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="./style/style.css">
     <title>Zaha</title>
   </head>
   <body>
     <div class="container"></div>
   </body>
-  <script src="/bundle.js"></script>
+  <script src="./bundle.js"></script>
 </html>
